--- a/WpfApp2/WpfApp2/login.xaml
+++ b/WpfApp2/WpfApp2/login.xaml
@@ -11,7 +11,7 @@
         <Label x:Name="password" Content="Password:" HorizontalAlignment="Left" Margin="91,149,0,0" VerticalAlignment="Top" Height="26" Width="68" HorizontalContentAlignment="Right"/>
         <TextBox x:Name="login_input" HorizontalAlignment="Left" Height="23" Margin="179,122,0,0" TextWrapping="Wrap" Text="Enter Login ID" VerticalAlignment="Top" Width="120" Cursor="IBeam"/>
         <TextBox x:Name="password_input" HorizontalAlignment="Left" Height="23" Margin="179,152,0,0" TextWrapping="Wrap" Text="Enter Password" VerticalAlignment="Top" Width="120" Cursor="IBeam"/>
-        <Button x:Name="bt_login" Content="Login" HorizontalAlignment="Left" Margin="179,198,0,0" VerticalAlignment="Top" Width="120" Height="21"/>
+        <Button x:Name="bt_login" Content="Login" HorizontalAlignment="Left" Margin="179,198,0,0" VerticalAlignment="Top" Width="120" Height="21" Click="bt_login_Click"/>
 
     </Grid>
 </Window>
