--- a/WpfApp2/WpfApp2/Individual bookings.xaml
+++ b/WpfApp2/WpfApp2/Individual bookings.xaml
@@ -12,10 +12,31 @@
         <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand"/>
         <Image HorizontalAlignment="Left" Height="24" Margin="10,42,0,0" VerticalAlignment="Top" Width="26" Source="back_icon.ico"/>
         <Button x:Name="bt_cancel_booking" Content="Cancel Booking" HorizontalAlignment="Left" Margin="313,91,0,0" VerticalAlignment="Top" Width="179" Height="50" Cursor="Hand" Click="bt_cancel_booking_Click"/>
-        <Button x:Name="bt_save_changes" Content="Save Changes" HorizontalAlignment="Left" Margin="313,195,0,0" VerticalAlignment="Top" Width="179" Height="50"/>
-        <TextBox HorizontalAlignment="Left" Height="161" Margin="28,107,0,0" TextWrapping="Wrap" Text="Patient Name-ID-Date/Time-Doctor-Room-Description" VerticalAlignment="Top" Width="157"/>
+        <Button x:Name="bt_save_changes" Content="Save Changes" HorizontalAlignment="Left" Margin="313,195,0,0" VerticalAlignment="Top" Width="179" Height="50" Click="bt_save_changes_Click"/>
         <Label x:Name="booking_details_view" Content="Booking Details" HorizontalAlignment="Left" Margin="28,78,0,0" VerticalAlignment="Top" Height="29" Width="113"/>
         <Image x:Name="edit_bookings" HorizontalAlignment="Left" Height="24" Margin="159,78,0,0" VerticalAlignment="Top" Width="26" Source="edit_button.png"/>
+        <Label x:Name="lb_patient_id" Content="Patient ID:" HorizontalAlignment="Left" Margin="26,115,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_patient_name" Content="Name:" HorizontalAlignment="Left" Margin="45,138,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_date" Content="Date:" HorizontalAlignment="Left" Margin="52,160,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_time" Content="Time:" HorizontalAlignment="Left" Margin="51,183,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_doctor" Content="Doctor:" HorizontalAlignment="Left" Margin="40,206,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_room" Content="Room:" HorizontalAlignment="Left" Margin="46,230,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_description" Content="Description:" HorizontalAlignment="Left" Margin="17,255,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_patient_id" HorizontalAlignment="Left" Height="23" Margin="95,119,0,0" TextWrapping="Wrap" Text="Patinent ID" VerticalAlignment="Top" Width="180" TextChanged="tb_patient_id_TextChanged">
+            <TextBox.DataContext>
+                <local:DBConnection/>
+            </TextBox.DataContext>
+        </TextBox>
+        <TextBox x:Name="tb_name" HorizontalAlignment="Left" Height="23" Margin="95,142,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="180" TextChanged="tb_name_TextChanged">
+            <TextBox.DataContext>
+                <local:DBConnection/>
+            </TextBox.DataContext>
+        </TextBox>
+        <TextBox x:Name="tb_date" HorizontalAlignment="Left" Height="23" Margin="95,165,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_time" HorizontalAlignment="Left" Height="23" Margin="95,188,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_doctor" HorizontalAlignment="Left" Height="23" Margin="95,211,0,0" TextWrapping="Wrap" Text="Doctor" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_room" HorizontalAlignment="Left" Height="23" Margin="95,234,0,0" TextWrapping="Wrap" Text="Room" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_description" HorizontalAlignment="Left" Height="55" Margin="95,257,0,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Width="180"/>
 
     </Grid>
 </Window>
