--- a/WpfApp2/WpfApp2/staff_individual.xaml
+++ b/WpfApp2/WpfApp2/staff_individual.xaml
@@ -8,8 +8,8 @@
         Title="Staff Details" Height="350" Width="520" ResizeMode="NoResize">
     <Grid Cursor="Hand">
         <Button x:Name="bt_bookings" Content="Bookings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Click="btn_ookings_Click" Height="37" Cursor="Hand"/>
-        <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37"/>
-        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand"/>
+        <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="bt_patients_Click"/>
+        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click"/>
         <Calendar x:Name="staff_calendar" HorizontalAlignment="Left" Margin="313,121,0,0" VerticalAlignment="Top"/>
         <ListView HorizontalAlignment="Left" Height="157" Margin="28,121,0,0" VerticalAlignment="Top" Width="161" SelectionChanged="ListView_SelectionChanged">
             <ListView.View>
