--- a/WpfApp2/WpfApp2/Patient_registration.xaml
+++ b/WpfApp2/WpfApp2/Patient_registration.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="WpfApp2.Patient_registration"
+﻿<Window x:Name="Patient_registration1" x:Class="WpfApp2.Patient_registration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
-        mc:Ignorable="d"
-        Title="Patient_registration" Height="429.412" Width="397.479">
+        mc:Ignorable="d" Height="429" Width="397" Title="Patient Registeration">
     <Grid>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,32,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top"/>
         <TextBox x:Name="Name" HorizontalAlignment="Left" Height="23" Margin="10,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" TextChanged="textBox_TextChanged">
