--- a/WpfApp2/WpfApp2/Booking_new.xaml
+++ b/WpfApp2/WpfApp2/Booking_new.xaml
@@ -21,7 +21,7 @@
         <TextBox x:Name="txt_room" HorizontalAlignment="Left" Height="23" Margin="240,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txt_description" HorizontalAlignment="Left" Height="164" Margin="240,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="lb_description" Content="Description" HorizontalAlignment="Left" Margin="240,69,0,0" VerticalAlignment="Top" Width="94"/>
-        <Button x:Name="bt_confirm_booking" Content="Add Booking" HorizontalAlignment="Left" Margin="240,286,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="bt_confirm_booking" Content="Add Booking" HorizontalAlignment="Left" Margin="240,286,0,0" VerticalAlignment="Top" Width="120" Click="bt_confirm_booking_Click"/>
 
     </Grid>
 </Window>
