Added patient searching & information modification
You can now search for patients through their ID, the program will pull the appropriate data from the database and show it in the text boxes, which can then be modified and changes can be saved and sent to the database

--- a/WpfApp2/WpfApp2/Patients.xaml
+++ b/WpfApp2/WpfApp2/Patients.xaml
@@ -11,8 +11,7 @@
         <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
         <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand"/>
         <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="369,199,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="369,78,-14,0" TextWrapping="Wrap" Text="Search Patient" VerticalAlignment="Top" Width="110"/>
-        <Image HorizontalAlignment="Left" Height="24" Margin="343,78,0,0" VerticalAlignment="Top" Width="26" Source="search_icon.PNG"/>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="369,78,-14,0" TextWrapping="Wrap" Text="Search Patient" VerticalAlignment="Top" Width="110" TextChanged="SearchBox_TextChanged"/>
         <ListView HorizontalAlignment="Left" Height="161" Margin="28,107,0,0" VerticalAlignment="Top" Width="157">
             <ListView.View>
                 <GridView>
@@ -24,6 +23,13 @@
         </ListView>
         <Label x:Name="todays_patient" Content="Today's Patient" HorizontalAlignment="Left" Margin="28,78,0,0" VerticalAlignment="Top"/>
         <Image x:Name="bt_edit" HorizontalAlignment="Left" Height="17" Margin="159,85,0,0" VerticalAlignment="Top" Width="26" Source="edit_button.png"/>
+        <Button Height="24" Width="24" Margin="345,78,143,217" Click="Button_Click">
+            <Button.Template>
+                <ControlTemplate>
+                    <Image Source="search_icon.png"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
     </Grid>
 </Window>
