added search by bookingID functionality

--- a/WpfApp2/WpfApp2/booking_screen.xaml
+++ b/WpfApp2/WpfApp2/booking_screen.xaml
@@ -12,7 +12,7 @@
         <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="bt_staff_Click"/>
         <Button x:Name="bt_new_booking" Content="New Booking" HorizontalAlignment="Left" Margin="369,42,0,0" VerticalAlignment="Top" Width="110" Height="24" Click="bt_new_booking_Click"/>
         <TextBox x:Name="booking_search" HorizontalAlignment="Left" Height="24" Margin="369,75,0,0" TextWrapping="Wrap" Text="Search" VerticalAlignment="Top" Width="110"/>
-        <Image HorizontalAlignment="Left" Height="24" Margin="338,75,0,0" VerticalAlignment="Top" Width="26" Source="search_icon.PNG"/>
+        <Image HorizontalAlignment="Left" Height="24" Margin="338,75,0,0" VerticalAlignment="Top" Width="26" Source="search_icon.PNG" ContextMenuClosing="button_searchBooking"/>
         <Calendar x:Name="booking_calendar" HorizontalAlignment="Left" Margin="313,121,0,0" VerticalAlignment="Top" Width="179"/>
         <ListView x:Name="booking_list" HorizontalAlignment="Left" Height="161" Margin="28,107,0,0" VerticalAlignment="Top" Width="157">
             <ListView.View>
