--- a/WpfApp2/WpfApp2/staff_individual.xaml
+++ b/WpfApp2/WpfApp2/staff_individual.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Staff Details" Height="350" Width="520" ResizeMode="NoResize">
+        Title="Staff Details" Height="379.25" Width="520.75" ResizeMode="NoResize">
     <Grid Cursor="Hand">
-        <Button x:Name="bt_bookings" Content="Bookings" HorizontalAlignment="Left" Width="170" Click="btn_ookings_Click" Cursor="Hand" Margin="0,0,0,284.5"/>
+        <Button x:Name="bt_bookings" Content="Bookings" HorizontalAlignment="Left" Width="170" Click="btn_ookings_Click" Cursor="Hand" Margin="0,0,0,313.5"/>
         <Button x:Name="bt_patients" Content="Patients" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Click="bt_patients_Click"/>
         <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click"/>
-        <Calendar x:Name="staff_calendar" HorizontalAlignment="Left" Margin="313,121,0,0" VerticalAlignment="Top"/>
-        <ListView HorizontalAlignment="Left" Height="157" Margin="28,121,0,0" VerticalAlignment="Top" Width="161" SelectionChanged="ListView_SelectionChanged">
+        <Calendar x:Name="staff_calendar" HorizontalAlignment="Left" Margin="313,165,0,0" VerticalAlignment="Top"/>
+        <ListView HorizontalAlignment="Left" Height="157" Margin="28,176,0,0" VerticalAlignment="Top" Width="161" SelectionChanged="ListView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -20,10 +20,21 @@
             <ListBoxItem x:Name="date_shift" Content="Date-Shift" Width="108" Selected="ListBoxItem_Selected" FontWeight="Bold" FontStyle="Italic" Height="33"/>
             <ScrollBar x:Name="shift_list_scroller" Height="96" Width="32"/>
         </ListView>
-        <Label x:Name="staff_shift_week" Content="Shift(Date)" HorizontalAlignment="Left" Margin="28,96,0,0" VerticalAlignment="Top" Height="25" Width="122"/>
-        <TextBox x:Name="staff_details_box" HorizontalAlignment="Left" Height="49" Margin="28,42,0,0" TextWrapping="Wrap" Text="Name-Staff ID-Address-Contact Details-DOB-Role" VerticalAlignment="Top" Width="283" TextChanged="TextBox_TextChanged"/>
-        <Image HorizontalAlignment="Left" Height="24" Margin="155,97,0,0" VerticalAlignment="Top" Width="26" Source="edit_button.png"/>
+        <Label x:Name="staff_shift_week" Content="Shift(Date)" HorizontalAlignment="Left" Margin="33,151,0,0" VerticalAlignment="Top" Height="25" Width="122"/>
+        <Image HorizontalAlignment="Left" Height="24" Margin="160,152,0,0" VerticalAlignment="Top" Width="26" Source="edit_button.png"/>
         <Image HorizontalAlignment="Left" Height="24" Margin="-1,44,0,0" VerticalAlignment="Top" Width="26" Source="back_icon.ico"/>
+        <Label x:Name="lb_staff_id" Content="Staff ID" HorizontalAlignment="Left" Margin="30,44,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_staff_id" HorizontalAlignment="Left" Height="23" Margin="84,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lb_staff_name" Content="Name" HorizontalAlignment="Left" Margin="37,75,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_staff_name" HorizontalAlignment="Left" Height="23" Margin="84,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lb_address" Content="Address" HorizontalAlignment="Left" Margin="209,44,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_address" HorizontalAlignment="Left" Height="23" Margin="262,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210"/>
+        <TextBox x:Name="tb_contact_details" HorizontalAlignment="Left" Height="23" Margin="84,109,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lb_contact_details" Content="Contacts" HorizontalAlignment="Left" Margin="22,106,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lb_dob" Content="DOB" HorizontalAlignment="Left" Margin="224,78,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_dob" HorizontalAlignment="Left" Height="23" Margin="267,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lb_role" Content="Role" HorizontalAlignment="Left" Margin="224,114,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_role" HorizontalAlignment="Left" Height="23" Margin="267,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
