--- a/WpfApp2/WpfApp2/Patients.xaml
+++ b/WpfApp2/WpfApp2/Patients.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="Patients" Height="350" Width="520">
     <Grid>
-        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand"/>
+        <Button x:Name="bt_home" Content="Home" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_home_Click"/>
         <Button x:Name="bt_booking" Content="Bookings" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_booking_Click"/>
-        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand"/>
+        <Button x:Name="bt_staff" Content="Staff" HorizontalAlignment="Left" Margin="340,0,0,0" VerticalAlignment="Top" Width="170" Height="37" Cursor="Hand" Click="bt_staff_Click"/>
         <Button x:Name="bt_register_patient" Content="Register Patient" HorizontalAlignment="Left" Margin="369,199,0,0" VerticalAlignment="Top" Width="110" Height="30" Cursor="Hand" Click="bt_register_patient_Click"/>
         <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="24" Margin="369,78,-14,0" TextWrapping="Wrap" Text="Search Patient" VerticalAlignment="Top" Width="110" TextChanged="SearchBox_TextChanged"/>
         <ListView HorizontalAlignment="Left" Height="161" Margin="28,107,0,0" VerticalAlignment="Top" Width="157">
