--- a/WpfApp2/WpfApp2/Individual bookings.xaml
+++ b/WpfApp2/WpfApp2/Individual bookings.xaml
@@ -22,19 +22,18 @@
         <Label x:Name="lb_doctor" Content="Doctor:" HorizontalAlignment="Left" Margin="40,206,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lb_room" Content="Room:" HorizontalAlignment="Left" Margin="46,230,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lb_description" Content="Description:" HorizontalAlignment="Left" Margin="17,255,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="ID" HorizontalAlignment="Left" Height="23" Margin="95,119,0,0" TextWrapping="Wrap" Text="Patient ID" VerticalAlignment="Top" Width="180" TextChanged="tb_patient_id_TextChanged">
+        <TextBox x:Name="tb_patientid" HorizontalAlignment="Left" Height="23" Margin="95,119,0,0" TextWrapping="Wrap" Text="Patient ID" VerticalAlignment="Top" Width="180" TextChanged="tb_patient_id_TextChanged">
 
         </TextBox>
         <TextBox x:Name="tb_name" HorizontalAlignment="Left" Height="23" Margin="95,142,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="180" TextChanged="tb_name_TextChanged">
         </TextBox>
-        <TextBox x:Name="Date" HorizontalAlignment="Left" Height="23" Margin="95,165,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="180"/>
-        <TextBox x:Name="Time" HorizontalAlignment="Left" Height="23" Margin="95,188,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="180"/>
-        <TextBox x:Name="Doctor" HorizontalAlignment="Left" Height="23" Margin="95,211,0,0" TextWrapping="Wrap" Text="Doctor" VerticalAlignment="Top" Width="180"/>
-        <TextBox x:Name="Room" HorizontalAlignment="Left" Height="23" Margin="95,234,0,0" TextWrapping="Wrap" Text="Room" VerticalAlignment="Top" Width="180"/>
-        <TextBox x:Name="Description" HorizontalAlignment="Left" Height="55" Margin="95,255,0,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Width="180"/>
-        <TextBox x:Name="Booking_ID" HorizontalAlignment="Left" Height="23" Margin="95,96,0,0" TextWrapping="Wrap" Text="Booking ID" VerticalAlignment="Top" Width="180" TextChanged="tb_patient_id_TextChanged">
-        </TextBox>
+        <TextBox x:Name="tb_date" HorizontalAlignment="Left" Height="23" Margin="95,165,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_time" HorizontalAlignment="Left" Height="23" Margin="95,188,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_doctor" HorizontalAlignment="Left" Height="23" Margin="95,211,0,0" TextWrapping="Wrap" Text="Doctor" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_room" HorizontalAlignment="Left" Height="23" Margin="95,234,0,0" TextWrapping="Wrap" Text="Room" VerticalAlignment="Top" Width="180"/>
+        <TextBox x:Name="tb_description" HorizontalAlignment="Left" Height="55" Margin="95,255,0,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Width="180"/>
         <Label x:Name="lb_patient_id_Copy" Content="Booking ID" HorizontalAlignment="Left" Margin="26,96,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="tb_bookingid" HorizontalAlignment="Left" Margin="95,103,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="180"/>
 
     </Grid>
 </Window>
