--- a/WpfApp2/WpfApp2/staff_menu.xaml
+++ b/WpfApp2/WpfApp2/staff_menu.xaml
@@ -27,6 +27,7 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="28,116,0,0" VerticalAlignment="Top" Height="173" Width="248"/>
 
     </Grid>
 </Window>
